@@ -1,3 +1,8 @@
+2006-03-05  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSScreen.m: ([-visibleFrame]) fix to work when using
+	mac style horizontal menu.
+
 2006-03-01  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSMenuView.m: ([-rectOfItemAtIndex:]) Fix bug #15934 by
